2003-12-14  MenTaLguY <mental@rydia.net>

	* src/view.h, src/view.c: added new utility things for setting status

2003-12-14  bulia byak <bulia@dr.com>

	* src/verbs.h src/verbs.c: changed 'offset' to 'outset' (more logical), added simplify
	path command

	* src/interface.c: added sp_key_name to make shortcuts more readable, added simplify
	path command, regrouped commands more logically

	* src/shortcuts.c: changed shortcuts for boolean ops, readability, minor cleanups

	* src/inkscape.c: increased max length of recent documents list to 15, fixed trimming
	the list

	* src/seltrans.c: fixed crash when scaling very small objects at max zoom

2003-12-12  MenTaLguY <mental@rydia.net>

	* doc/Makefile.am, Makefile.am, configure.in: include doc/
	  subdirectory in distribution tarballs

	* src/widgets/icon.c: final tweaks for getting icon highlights
	  right on buttons (temporary hack, hopefully)

	* src/splivarot.cpp: compilation fix

	* src/widgets/sp-color-notebook.c: minor tweak so selector menu
	  is a little more obvious

2003-12-12  bulia byak <bulia@dr.com>

	* src/svg/svg-path.c src/desktop.h src/libnr/gen_nr_config.c src/libnr/nr-object.c
	src/libnr/nr-types.h: made all floats doubles and all shorts ints in libnr; maximum
	zoom is increased to 256; SVG paths are stored with 8 digits precision (was 6)

2003-12-11  bulia byak <bulia@dr.com>

	* src/node-context.c adding node edit statusbar updates

	* src/selection.c: update statusbar only if selector is active

	* src/tools-switch.c: update statusbar when selector is activated

	* src/nodepath.c src/nodepath.h: function for node edit statusbar display; fixes for
	several tab-cycling and node-deleting bugs

	* src/sp-path.c: added description for SPPath (used in statusbar display)

	* src/draw-context.c: moved some messages from console to statusbar

	* src/view.c src/view.h: utility functions for statusbar display

	* src/text-context.c: statusbar display for unimode

2003-12-10  Ted Gould <ted@gould.cx>
